opam-version: "2.0"
name: "rfsm"
version: "1.5"
maintainer: "jocelyn.serot@uca.fr"
authors: [
  "Jocelyn Sérot <jocelyn.serot@uca.fr>"
]
homepage: "http://dream.ispr-ip.fr/RFSM"
dev-repo: "git://github.com/jserot/rfsm.git"
bug-reports: "jocelyn.serot@uca.fr"
license: "MIT"
build: [
  ["./configure" "--no-gui" "--no-doc"]
  [make "opam"]
]
install: [
  [make "install-opam"]
]
depends: [
  "ocaml" {>= "4.03"}
  "camlp4"
  "ocamlfind" {build}
  "ocamlbuild" {build}
  "ocamlgraph"
  "menhir"
  "lascar"
]
synopsis:
  "A toolset for describing and simulating StateChart-like state diagrams"
url {
  src: "http://dream.ispr-ip.fr/RFSM/dist/rfsm.tar.gz"
  checksum: "md5=1febda48d5fed77b887778f65d4c2685"
}

