opam-version: "2.0"
synopsis:
  "A toolset for describing and simulating StateChart-like state diagrams"
maintainer: ["Jocelyn Sérot <jocelyn.serot@uca.fr>"]
authors: ["Jocelyn Sérot <jocelyn.serot@uca.fr>"]
license: "MIT"
homepage: "http://github.com/jserot/rfsm"
doc: "http://jserot.github.io/rfsm"
bug-reports: "jocelyn.serot@uca.fr"
depends: [
  "dune" {>= "3.11"}
  "menhir" {>= "2.0"}
  "ocamlgraph" {>= "2.0"}
  "ocaml" {>= "4.14.0"}
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/jserot/rfsm.git"
