opam-version: "2.0"
version: "2.3"
synopsis:
  "A toolset for describing and simulating StateChart-like state diagrams"
maintainer: ["Jocelyn Sérot <jocelyn.serot@uca.fr>"]
authors: ["Jocelyn Sérot <jocelyn.serot@uca.fr>"]
license: "MIT"
homepage: "http://github.com/jserot/rfsm"
bug-reports: "jocelyn.serot@uca.fr"
depends: [
  "dune" {>= "3.11"}
  "menhir" {>= "2.0"}
  "ocamlgraph" {>= "2.0"}
  "ppx_deriving" {>= "5.0"}
  "ocaml" {>= "5.0.0"}
  "yojson" {>= "2.0"}
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/jserot/rfsm.git"
