(library
  (flags (:standard -annot) (:standard -w -27-32))
  (preprocess (pps ppx_deriving.show ppx_deriving.make ppx_deriving.map))
  (libraries ocamlgraph str)
  (public_name rfsm))


; Warning: the following rule may fail when building under Windows with "Error: CreateProcess(): Exec format error"
; As a workaround, run [make options.ml] 
(rule
  (target options.ml)
  (deps   options_spec.txt options.cppo.ml)
  (action (run ./build_options_spec %{deps} %{target})))
