(library
  (flags (:standard -annot) (:standard -w -27-32))
  (preprocess (pps ppx_deriving.show ppx_deriving.make ppx_deriving.map))
  (libraries ocamlgraph str unix yojson)
  (public_name rfsm))

(rule
 (target options.ml)
 (deps options_spec.txt options.cppo.ml)
 (enabled_if (= %{os_type} "Unix"))
 (action (run ./build_options_spec %{deps} %{target})))

(rule
 (target options.ml)
 (deps options_spec.txt options.cppo.ml build_options_spec)
 (enabled_if (= %{os_type} "Win32"))
 (action (chdir %{workspace_root}/src/host/lib
         (run "C:/Program Files/Git/bin/bash.exe"
              ./build_options_spec
              %{dep:options_spec.txt}
              %{dep:options.cppo.ml}
              %{target}))))

